src/test/deca/syntax/valid/while.deca
// Description:
//    Programme qui utilise une boucle `while` pour afficher les entiers de 0 à 9.
//
// Resultats:
//    0
//    1
//    2
//    3
//    4
//    5
//    6
//    7
//    8
//    9
//
// Historique:
//    cree le 01/01/2025
{
    int i = 0;
    while (i < 10) {
        println(i);
        i = i + 1;
    }
}
