src/test/deca/syntax/invalid/malformed-structure.deca
// Description:
//    Test : Boucle `while` sans parenthèses.
//
// Resultats:
//    Doit échouer avec un message d'erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2025
{
    int a = 0;
    while a < 10 {
        a = a + 1;
    }
}